--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Domů</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">O mě</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">O mně</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Rekvalifikace</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Projekty</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Kontakty</a></li>
@@ -73,7 +73,7 @@
             <!-- O mě / experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">O mě</h2>
+                    <h2 class="mb-5">O mně</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Kdo jsem?</h3>
