Změna textu v index.html, nahrána nová verze

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projekty</h2>
                     <div class="subheading mb-3">Moje projekty na platformě Github:</div>
-                    <p>Program "Zaměstnanci" jsem naprogramovala v jazyce JAVA za použití praktiky OOP:</p>
+                    <p>Program "Zaměstnanci" jsem naprogramovala v jazyce JAVA za použití principu OOP:</p>
                     <div class="subheading mb-3"><a href="https://github.com/Kacisska/zamestnanci">Zaměstnanci</a></div>
 
 
